--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,84 +4,112 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:textAlignment="center"
     tools:context=".MainActivity">
 
     <ImageView
-        android:id="@+id/imageView7"
-        android:layout_width="551dp"
-        android:layout_height="386dp"
-        app:srcCompat="@drawable/cartography"
-        tools:layout_editor_absoluteX="-79dp"
-        tools:layout_editor_absoluteY="163dp" />
-
-    <ImageView
         android:id="@+id/imageView4"
-        android:layout_width="487dp"
-        android:layout_height="274dp"
-        app:srcCompat="@drawable/mappa"
-        tools:layout_editor_absoluteX="-38dp"
-        tools:layout_editor_absoluteY="-6dp" />
+        android:layout_width="414dp"
+        android:layout_height="347dp"
+        android:layout_marginTop="-25dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toTopOf="@+id/editTextNumber"
+        app:layout_constraintDimensionRatio="h,16:9"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.488"
+        app:srcCompat="@drawable/mappa" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="425dp"
-        android:layout_height="315dp"
-        app:srcCompat="@drawable/compass"
-        tools:layout_editor_absoluteX="-7dp"
-        tools:layout_editor_absoluteY="450dp" />
-
-    <TextView
-        android:layout_width="193dp"
-        android:layout_height="58dp"
-        android:text="The History app"
-        android:textAlignment="center"
-        android:textColorLink="@color/material_dynamic_secondary0"
-        android:textSize="24sp"
+        android:layout_width="642dp"
+        android:layout_height="271dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="h,16:9"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.545"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.133" />
+        app:layout_constraintTop_toBottomOf="@id/imageView4"
+        app:layout_constraintVertical_bias="1.0"
+        app:srcCompat="@drawable/compass" />
 
-    <TextView
+    <EditText
         android:id="@+id/editTextNumber"
-        android:layout_width="300dp"
-        android:layout_height="49dp"
-        android:text="Enter Your Age: ___________"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="1dp"
+        android:hint="Please Enter Age Here:"
         android:textAlignment="center"
         android:textSize="20sp"
-        tools:layout_editor_absoluteX="-21dp"
-        tools:layout_editor_absoluteY="341dp" />
+        app:layout_constraintBottom_toTopOf="@+id/ClickmeButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/ClickmeButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Generate History"
-        tools:layout_editor_absoluteX="252dp"
-        tools:layout_editor_absoluteY="327dp" />
-
-    <Button
-        android:id="@+id/button2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Clear"
-        tools:layout_editor_absoluteX="10dp"
-        tools:layout_editor_absoluteY="388dp" />
+        android:layout_marginStart="202dp"
+        android:layout_marginEnd="7dp"
+        android:layout_marginBottom="42dp"
+        android:text="Confirm"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/ClickmeButton"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber"
+        tools:ignore="NotSibling" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="407dp"
-        android:layout_height="247dp"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="472dp" />
+        android:layout_width="417dp"
+        android:layout_height="201dp"
+        android:layout_marginStart="190dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginBottom="-350dp"
+        android:text="textview"
+        android:textAlignment="center"
+        android:textColor="#0B0303"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.984"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
 
     <TextView
-        android:id="@+id/textView3"
-        android:layout_width="90dp"
-        android:layout_height="21dp"
-        tools:layout_editor_absoluteX="156dp"
-        tools:layout_editor_absoluteY="339dp" />
+        android:id="@+id/textView2"
+        android:layout_width="376dp"
+        android:layout_height="144dp"
+        android:layout_marginStart="-400dp"
+        android:layout_marginTop="-280dp"
+        android:layout_marginEnd="-450dp"
+        android:layout_marginBottom="-280dp"
+        android:text="History"
+        android:textAlignment="center"
+        android:textColor="#0C0303"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toTopOf="@+id/imageView4"
+        app:layout_constraintEnd_toStartOf="@+id/imageView4"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/imageView4"
+        app:layout_constraintTop_toBottomOf="@+id/imageView4"
+        app:layout_constraintVertical_bias="0.623" />
+
+    <Button
+        android:id="@+id/clearButton"
+        android:layout_width="93dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="-400dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="-100dp"
+        android:layout_marginBottom="40dp"
+        android:text="Clear"
+        app:layout_constraintBottom_toTopOf="@+id/imageView3"
+        app:layout_constraintEnd_toStartOf="@+id/textView"
+        app:layout_constraintStart_toEndOf="@+id/textView"
+        app:layout_constraintTop_toBottomOf="@+id/editTextNumber" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
